# Saas

./: .gitignore  COMPLETE_SYSTEM_README.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_SUMMARY.md  DOWNLOAD_SUMMARY.txt  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_GITHUB_SUMMARY.md  GITHUB_DEPLOYMENT.md  GITHUB_PUSH_CONFIRMATION.md  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  README.md  README_old_backup.md  SETUP_GUIDE.md  USAGE_INSTRUCTIONS.md  simple_ws_test.py  system_status.md  test_binance_simple.py  test_binance_simulator.py  test_websocket_fixed.py  test_ws.sh
docs/: ARCHITECTURE.md  BUSINESS_PLAN.md
quant-saas-backend-package/: LOCAL_SETUP_GUIDE.md  debug_binance.py  final_status.md  test_binance_connection.py  test_market_ws.py  test_ws.py
quant-saas-backend-package/quant-saas-backend-package/: GITHUB_READY_SUMMARY.txt
quant-saas-backend-package/src/: main.rs
quant-saas-frontend/: .env.example  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  README.md  package-lock.json  package.json
quant-saas-frontend/src/: App.tsx
quant-saas-frontend/src/components/: ChartComponent.tsx  Dashboard.tsx  MarketStats.tsx  SymbolSelector.tsx  TradeTable.tsx
quant-saas-frontend/src/services/: api.service.ts  websocket.service.ts
quant-saas-frontend/src/types/: marketData.types.ts
scripts/: dev.sh
